assets/styles/style.css
@charset "UTF-8";
@import url(normalize.css);
@font-face {
  src: url(../fonts/Lato-Bold.ttf);
  font-family: "LatoBold";
}
@font-face {
  src: url(../fonts/Lato-Black.ttf);
  font-family: "LatoBlack";
}
@font-face {
  src: url(../fonts/Lato-Light.ttf);
  font-family: "LatoLight";
}
@font-face {
  src: url(../fonts/Lato-Regular.ttf);
  font-family: "LatoRegular";
}

/*----------specification--------*/
html {
  font-size: 10px;
}
* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
:focus {
  outline: 0;
}
li {
  list-style: none;
}
a,
a:hover {
  text-decoration: none;
}

.container {
  max-width: 1020px;
  margin: 0 auto;
  padding: 0 40px;
}
/*-------burger------*/
.burger{
  position: relative;
  z-index: 10;
  width: 25px;
  height: 20px;
  display: none;
  flex-direction: column;
  justify-content: space-between;
  transition: all 0.3s ease;
}
.line{
  width: 100%;
  height: 2.4px;
  border-radius: 5px;
  background-color: #fff;
}
.blackout{
  display: none;
}
/* ----------header--------- */
header {
  position: fixed;
  width: 100%;
  z-index: 100;
  background-color: #2d303a;
  border-bottom: 6px solid #323746;
}
.header-content {
  height: 89px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "LatoBold";
  color: #fff;
}
.logo {
  transition: all 0.3s ease;
  font-size: 2.5rem;
  letter-spacing: -0.6px;
}
.logo span,
nav > ul a:hover {
  color: #f06c64;
}
nav{
  transition: all 0.3s ease;
}
nav > ul {
  margin-top: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}
nav > ul li::before {
  content: "∙";
  width: 4px;
  height: 4px;
  color: #494e62;
  margin: 0 13px;
}
nav > ul li:first-child::before {
  display: none;
}
nav > ul a {
  font-size: 1.2rem;
  color: #fff;
  -webkit-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

/* ---------slider------- */

.slider {
  padding-top: 95px;
  background-color: #f06c64;
  border-bottom: 6px solid #ea676b;
  transition: all 0.3s ease;
}
.slider-content {
  position: relative;
  height: 594px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}
.arrowBack,
.arrowNext {
  top: 50%;
  transform: translateY(-50%);
  position: absolute;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
}
.arrowBack {
  left: 40px;
}
.arrowNext {
right: 40px;
}
.arrowBack:hover {
  -webkit-transform: scale(1.2, 1.2) translateY(-50%);
  -ms-transform: scale(1.2, 1.2) translateY(-50%);
  transform: scale(1.2, 1.2) translateY(-50%);
}
.arrowBack:active {
  -webkit-transform: scale(0.8, 0.8) translateY(-50%);
  -ms-transform: scale(0.8, 0.8) translateY(-50%);
  transform: scale(0.8, 0.8) translateY(-50%);
}

.arrowNext:hover {
  -webkit-transform: scale(1.2, 1.2) translateY(-50%);
  -ms-transform: scale(1.2, 1.2) translateY(-50%);
  transform: scale(1.2, 1.2) translateY(-50%);
}
.arrowNext:active {
  -webkit-transform: scale(0.8, 0.8) translateY(-50%);
  -ms-transform: scale(0.8, 0.8) translateY(-50%);
  transform: scale(0.8, 0.8) translateY(-50%);
}
.phone-box-vertical {
  margin-right: 37px;
  position: relative;
  height: -webkit-calc(458px + 25px);
  height: calc(458px + 25px);
  width: -webkit-calc(215px + 25px);
  width: calc(215px + 25px);
  background-image: url(../img/Shadow.png);
}
.phone-box-horizontal {
  margin-left: 37px;
  position: relative;
  width: -webkit-calc(458px + 25px);
  width: calc(458px + 25px);
  height: -webkit-calc(215px + 25px);
  height: calc(215px + 25px);
  background-image: url(../img/ShadowH.png);
}
.phone-vertical {
  position: relative;
  background-color: #f2f2f2;
  -webkit-border-radius: 28px;
  border-radius: 28px;
  height: 458px;
  width: 215px;
}
.phone-vertical div:nth-child(1),
.phone-vertical div:nth-child(2),
.phone-vertical div:nth-child(3),
.phone-vertical div:nth-child(4) {
  position: absolute;
  top: 15px;
  left: 50%;
  -webkit-transform: translate(-50%, 0);
  -ms-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
}
.phone-vertical div:nth-child(2),
.phone-vertical div:nth-child(3),
.phone-vertical div:nth-child(4) {
  top: 36px;
}
.phone-vertical div:nth-child(3),
.phone-vertical div:nth-child(4) {
  top: 62px;
}
.phone-vertical div:nth-child(4) {
  background-color: transparent;
  top: 408px;
}
.phone-horizontal {
  position: relative;
  background-color: #f2f2f2;
  -webkit-border-radius: 28px;
  border-radius: 28px;
  width: 458px;
  height: 215px;
}
.phone-horizontal div:nth-child(1),
.phone-horizontal div:nth-child(2),
.phone-horizontal div:nth-child(3),
.phone-horizontal div:nth-child(4) {
  position: absolute;
  right: 15px;
  top: 50%;
  -webkit-transform: translate(0, -50%);
  -ms-transform: translate(0, -50%);
  transform: translate(0, -50%);
}
/* ... */

